# AdventOfCode2024-in-C

./: .gitignore  .gitmodules  CMakeLists.txt
CMake/: AddAdventDay.cmake  AddDayTest.cmake
input_files/: day_2.txt
solutions/common/: CMakeLists.txt
solutions/common/include/: collections.h  file_parser.h
solutions/common/src/: file_parser.c  hashset_uint.c  list_str.c  list_uint.c
solutions/day_1/headers/: dictionary.h  input_processor.h  min_heap.h
solutions/day_1/src/: dictionary.c  input_processor.c  main.c  min_heap.c
solutions/day_2/headers/: banalyser.h
solutions/day_2/src/: banalyser.c  main.c
solutions/day_3/headers/: mul_finder.h
solutions/day_3/src/: main.c  mul_finder.c
solutions/day_4/headers/: matrix_search.h
solutions/day_4/src/: main.c  matrix_search.c
solutions/day_5/headers/: algorithm.h  rules.h  updates.h
solutions/day_5/src/: algorithm.c  main.c  rules.c  updates.c
solutions/day_6/headers/: path_finder.h  path_tracer.h
solutions/day_6/src/: main.c  path_finder.c  path_tracer.c
src/: CMakeLists.txt
src/common/: CMakeLists.txt  file_parser.c
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  test_file_parser.c  test_hashset_uint.c  test_list_str.c
tests/day_1/: test_min_heap.c
tests/day_2/: test_banalyser.c
tests/day_3/: test_mul_finder.c
tests/day_4/: test_matrix_search.c
tests/day_5/: test_algorithm.c  test_rules.c  test_updates.c
tests/day_6/: test_path_finder.c  test_path_tracer.c
tests/day_7/: test_permutations.c
tests/day_8/: test_algorithm.c  test_antinode_set.c  test_list_dict.c
(+10 files in other folders)
